@@ -1,6 +1,7 @@
 <!ENTITY prefwindow.title "FoxReplace options">
 <!ENTITY mainPane.title "Main">
 <!ENTITY description "Enter the substitution list. The list is composed of substitution groups, where the substitutions of each group are applied if any of the group URLs matches the address of the loaded page. If the group has no URLs its substitutions are applied to any page. Groups are checked in the order they appear.">
+<!ENTITY enabledHeader "Enable">
 <!ENTITY nameHeader "Name">
 <!ENTITY urlHeader "URL">
 <!ENTITY inputStringHeader "Replace">
